fix search styling on mobile

--- a/resources/sass/_layout.scss
+++ b/resources/sass/_layout.scss
@@ -371,6 +371,10 @@
     .search-dropdowns {
       flex-direction: column;
 
+      .search-select-wrapper {
+        width: 100%;
+      }
+
       .btn-search {
         width: 100%;
         justify-content: center;
